[package]
name = "sea-strum"
version = "0.21.0"
edition = "2018"
authors = ["Peter Glotfelty <peter.glotfelty@microsoft.com>"]
license = "MIT"

description = "Helpful macros for working with enums and strings"
keywords = ["enum", "string", "macros", "proc-macros"]
categories = ["development-tools::procedural-macro-helpers", "parsing"]

documentation = "https://docs.rs/strum"
homepage = "https://github.com/SeaQL/strum"
repository = "https://github.com/SeaQL/strum"
readme = "../README.md"

[dependencies]
sea-strum_macros = { path = "../strum_macros", optional = true, version = "0.21" }

[dev-dependencies]
sea-strum_macros = { path = "../strum_macros", version = "0.21" }

[badges]
travis-ci = { repository = "Peternator7/strum" }

[features]
derive = ["sea-strum_macros"]
sea-orm = ["sea-strum_macros/sea-orm"]

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
